--- a/updates.qmd
+++ b/updates.qmd
@@ -10,12 +10,13 @@ output:
     toc_float: yes
 ---
 
+* 2025/09/05: Uploaded final announcement for the [Colloquium in Honor of Hans Ulrich Burger on the Occasion of His Retirement from Roche](events_upcoming.html).
 * 2025/09/05: Uploaded first announcement for [BBS – Suisse Romandie Webinar: Patient Preference Studies: What Do We Know Now?](events_upcoming.html).
 * 2025/09/03: Uploaded first announcement for [BBS Training: A critical introduction to causal mediation analysis for biostatistics](events_upcoming.html).
 * 2025/07/16: Uploaded first announcement for [BBS Seminar: Causal mediation analysis in clinical research](events_upcoming.html).
 * 2025/06/25: Opened registration for [BBS NextGen Seminar: Building Bridges: Communication Across Academia, Industry, and Regulators](events_upcoming.html).
 * 2025/06/13: Added June BBS NextGen Lunch.
-* 2025/06/02: Uploaded first announcement for [Colloquium in Honor of Hans Ulrich Burger on the Occasion of His Retirement from Roche](events_upcoming.html).
+* 2025/06/02: Uploaded first announcement for the [Colloquium in Honor of Hans Ulrich Burger on the Occasion of His Retirement from Roche](events_upcoming.html).
 * 2025/04/30: Uploaded save-the-date for [BBS NextGen Seminar "Building Bridges: Communication Across Academia, Industry, and Regulators"](events_upcoming.html).
 * 2025/03/25: Added slides for [BBS Face-to-Face Meeting on Covariate Adjustment in Clinical Trials](events_past.html#bbs-face-to-face-meeting-on-covariate-adjustment-in-clinical-trials)
 * 2025/03/24: Added recording for [BBS Webinar "From Statistical Innovations to Common Practice: How to innovate with impact?"](events_past.html#bbs-webinar-on-from-statistical-innovations-to-common-practice-how-to-innovate-with-impact).
