--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,7 @@ output:
     toc_float: yes
 ---
 
+* 2024/10/16: Updated announcement for [BBS – Suisse Romande Workshop: Do you speak statistics?](events_upcoming.html).
 * 2024/10/14: Uploaded first announcement for [BBS Workshop on the False Discovery Rate](events_upcoming.html).
 * 2024/10/02: Cancelled DMC course, added October BBS NextGen Lunch
 * 2024/09/11: Added [BBS Suisse Romande committee page](suisseromande.html)
